RESOLVED FIXED294531
[Liquid Glass] [macOS] Favorites bar in Safari sometimes fails to adapt to changing luminance
https://bugs.webkit.org/show_bug.cgi?id=294531
Summary [Liquid Glass] [macOS] Favorites bar in Safari sometimes fails to adapt to ch...
Wenson Hsieh
Reported 2025-06-15 12:59:17 PDT
Attachments
Wenson Hsieh
Comment 1 2025-06-15 13:24:53 PDT
EWS
Comment 2 2025-06-16 12:40:32 PDT
Committed 296288@main (6166dacefda3): <https://commits.webkit.org/296288@main> Reviewed commits have been landed. Closing PR #46784 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.